# guide

./: .env.example  LICENSE  Makefile  pyproject.toml
configs/: guide.default.yaml
scripts/: export_mock_events.py  install_hooks.sh  run_demo.sh
src/guide/: cli.py  config.py
src/guide/checks/: commit_message.py  diff_size.py  rationale.py  tests_signal.py
src/guide/evidence/: emitter.py  schemas.py
src/guide/hooks/: _emit_helper.py  commit_msg.py  pre_commit.py  pre_push.py
src/guide/integrations/: git.py
tests/: test_commit_message.py  test_config.py  test_diff_size.py  test_evidence_emitter.py  test_evidence_schemas.py  test_git_integration.py  test_rationale.py  test_tests_signal.py
